Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </main>
 
         <footer class="footer">
-            <p>ZenBudget &copy; <span id="current-year">2025</span> | Borngreat Wealth Academy</p>
+            <p>ZenBudget &copy; <span id="current-year">2025</span> | Bright Borngreat</p>
         </footer>
     </div>
 
@@ -131,4 +131,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
