Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="apple-touch-icon" sizes="167x167" href="icons/icon-167x167.png">
     
     <!-- Manifest -->
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="./manifest.json">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="icons/icon-96x96.png">
@@ -166,3 +166,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
